samples/_failures_safe/1761137677_52dde5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a2a3e997.c: In function ‘main’:
./samples/SAFE/__tmp_a2a3e997.c:166:9: error: expected expression at end of input
  166 |         if (
      |         ^~
./samples/SAFE/__tmp_a2a3e997.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a2a3e997.c:166:9: error: expected declaration or statement at end of input
